hphp/hack/test/typecheck/null_check_strict.php.exp
File "null_check_strict.php", line 16, characters 9-16:
You are using a sketchy null check on a primitive type ...
Use is_null, or $x === null instead (Typing[4089])
